VZ-461 - Added evc yang model
Signed-off-by: vklevlanyk <vklevlanyk@frinx.io>
Change-Id: I51865f735984fc6de424d9629248c555355eca25

--- a/artifacts/pom.xml
+++ b/artifacts/pom.xml
@@ -222,6 +222,11 @@
                 <artifactId>uniconfig-model</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>io.frinx.openconfig</groupId>
+                <artifactId>openconfig-evc</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <!-- Features -->
             <dependency>
