VZ-477 : Create TU for fhrp version in IOS-XE module
Signed-off-by: mmartiska <mmartiska@frinx.io>
Change-Id: Ifd956bb4612166b5a3ef232d4bfd398791464aa9

--- a/features/openconfig-features/pom.xml
+++ b/features/openconfig-features/pom.xml
@@ -241,5 +241,12 @@
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
+    <dependency>
+      <groupId>io.frinx.openconfig</groupId>
+      <artifactId>frinx-openconfig-fhrp</artifactId>
+      <version>${project.version}</version>
+      <type>xml</type>
+      <classifier>features</classifier>
+    </dependency>
   </dependencies>
 </project>
