Openconfig bug with nested augmentations
- Fixed resolving augmentations path
- Add test for extracting augmentation metadata

Signed-off-by: vklevlanyk <vklevlanyk@frinx.io>
Change-Id: I2e41ae7863a4fece5e6024c9962529b753e24a20

--- a/openconfig-parent/pom.xml
+++ b/openconfig-parent/pom.xml
@@ -36,6 +36,7 @@
 
     <profiles>
         <profile>
+            <id>yang</id>
             <activation>
                 <file>
                     <exists>src/main/yang</exists>
