VZ-371: [FRINX-385] Create TU for AAA in huawei module
- Added aaa and radius modules from openconfig

Signed-off-by: vklevlanyk <vklevlanyk@frinx.io>
Change-Id: Ia35faee8f6cbfbb2fe1ade67acff1a98ea0526af

--- a/artifacts/pom.xml
+++ b/artifacts/pom.xml
@@ -232,6 +232,11 @@
                 <artifactId>openconfig-evc</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>io.frinx.openconfig</groupId>
+                <artifactId>openconfig-aaa</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <!-- Features -->
             <dependency>
