VZ-337: [FRINX-385] Create TU for user-interfaces in huawei
- Added new module System and TU for terminal

Signed-off-by: vklevlanyk <vklevlanyk@frinx.io>
Change-Id: I0026d835725697a58ca8601205e986f73d8c015f

--- a/artifacts/pom.xml
+++ b/artifacts/pom.xml
@@ -237,6 +237,11 @@
                 <artifactId>openconfig-aaa</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>io.frinx.openconfig</groupId>
+                <artifactId>openconfig-system</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <!-- Features -->
             <dependency>
